	Output peak capacity as unspecified as appropriate.
	
	* libfreeipmi/include/freeipmi/spec/ipmi-fru-chassis-types-spec.h,
	libfreeipmi/spec/ipmi-fru-chassis-types-spec.c: Add new chassis
	types.

	* libfreeipmi/include/freeipmi/fru/ipmi-fru.h,
	libfreeipmi/include/freeipmi/record-format/ipmi-fru-information-record-format.h,
	libfreeipmi/fru/ipmi-fru.c (_read_multirecord_area_data): Update
	
2013-04-24  Albert Chu <chu11@llnl.gov>

	* ipmi-dcmi/ipmi-dcmi.c (_sensor_info_output): Fix output
	calculation errors.
	
2013-04-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/cmds/ipmi-dcmi-cmds.c: Fix null terminator on
	tmpl_dcmi_rolling_average_time_period (Recommended fix by Michael
	Winiarski - michael dot winiarski at hp dot com).
	
2013-04-18  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_processing.c (_process_protocol_state_activate_payload_sent):
	Change "BMC Error" to "SOL Inuse" error message.
	
2013-04-03  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Note kernel driver issue.
	
2013-03-25  Peter Volkov <pva@gentoo.org>

	* Fix out of trunk source build.

2013-03-11  Holger Liebig <holger.liebig@ts.fujitsu.com>

	* ipmi-dcmi/: Output temperature sampling period appropriately.

	* libfreeipmi/cmds/ipmi-dcmi-cmds.c: Update
	tmpl_cmd_dcmi_get_dcmi_capability_info_mandatory_platform_attributes_rs
	with newer optional fields.

2013-03-08  Albert Chu <chu11@llnl.gov>

	* Add support for Supermicro X9SCM-iiF OEM sensors/events.
	
2013-03-08  Albert Chu <chu11@llnl.gov>

	* man/ipmi-sensors.8.pre.in: Fix typo (Found by Werner Fischer).
	
2013-02-28  Anonymous <anonymous@anonymous.com>

	* libfreeipmi/sel/ipmi-sel-string-intel.c (sel_string_output_intel_event_data2_event_data3):
	Fix string overflow.
	
2013-02-21  Albert Chu <chu11@llnl.gov>

	* Add support for Supermicro X9SPU-F-0 OEM sensors/events.

	* Add support for Supermicro X9DRI-LN4F+ OEM
	interpretations (forgotten earlier).
	
2013-01-22  Albert Chu <chu11@llnl.gov>
