@@ -198,10 +198,10 @@ int ipmi_fru_multirecord_power_supply_information (ipmi_fru_ctx_t ctx,
 						   unsigned int *peak_va,
 						   unsigned int *inrush_current,
 						   unsigned int *inrush_interval,
-						   unsigned int *low_end_input_voltage_range_1,
-						   unsigned int *high_end_input_voltage_range_1,
-						   unsigned int *low_end_input_voltage_range_2,
-						   unsigned int *high_end_input_voltage_range_2,
+						   int *low_end_input_voltage_range_1,
+						   int *high_end_input_voltage_range_1,
+						   int *low_end_input_voltage_range_2,
+						   int *high_end_input_voltage_range_2,
 						   unsigned int *low_end_input_frequency_range,
 						   unsigned int *high_end_input_frequency_range,
 						   unsigned int *ac_dropout_tolerance,
